changes done in about section

--- a/day1/index.html
+++ b/day1/index.html
@@ -36,6 +36,9 @@
             text-decoration: none;
             color: white;
         }
+        .about-text {
+          font-size: 1.4rem;
+        }
 
     </style>
 </head>
@@ -67,7 +70,7 @@
 
     <div class="d-flex my-3 p-2 bg-secondary justify-content-center align-items-center flex-wrap" id="about">
         <div class=" col text-center"><img  src="https://documents.iplt20.com/ipl/IPLHeadshot2024/2.png" alt="" width="250px"></div>
-        <div class=" col display-2rem">Hello there, my name is Mahesh and im react devloper with expertise in React,nodejs,sql with 1.7 yrs of exp</div>
+        <div class="about-text col">Hello there, my name is Mahesh and im react devloper with expertise in React,nodejs,sql with 1.7 yrs of exp</div>
     </div>
 
     <div class="d-flex mt-3 justify-content-center align-items-center gap-5 w-100%" id="skills">
